--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "bootstrap": "^5.0.1",
     "ng-sidebar": "^9.4.3",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.8.0",
